[gd_scene load_steps=7 format=3 uid="uid://bg46gwk5y4l6d"]

[ext_resource type="Script" path="res://scenes/bullets.gd" id="1_de7gf"]
[ext_resource type="Texture2D" uid="uid://cctte1dg65m0k" path="res://enemy/StarBullet2.png" id="1_ufi3u"]

[sub_resource type="Animation" id="Animation_qurq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack/CollisionPolygon2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_oei6t"]
resource_name = "attack"
length = 0.06
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.294961, 0.624828, 0.884882, 1.01578, 1.24966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack/CollisionPolygon2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.294961, 0.624828, 0.884882, 1.01578, 1.24966]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ugkip"]
_data = {
"RESET": SubResource("Animation_qurq3"),
"attack": SubResource("Animation_oei6t")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pep80"]
radius = 2636.38

[node name="Bullets" type="Area2D" groups=["bullets"]]
script = ExtResource("1_de7gf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 0)
texture = ExtResource("1_ufi3u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ugkip")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="attack" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="attack"]
position = Vector2(7, -1)
polygon = PackedVector2Array(2, -240, -60, -52, -254, -60, -94, 58, -159, 242, 1, 123, 155, 245, 93, 54, 254, -54, 55, -54)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pep80")
disabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_body_exited"]
